tests/errors/TODOBadDataCon2.hs
module Boo where

{-@ data T = C { fldX :: Int, fldY :: Int } @-}

data T = C { fldX :: Int }
